crates/churl/src/tui/components/load_runner/snapshots/churl__tui__components__load_runner__tests__snapshot_config_header_pre_run.snap
---
source: crates/churl/src/tui/components/load_runner/tests.rs
assertion_line: 380
expression: snapshot(&mut r)
---
"                                                                                                                    "
"      ┏ Load ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓      "
"      ┃List users  https://api.test/users                                                                    ┃      "
"      ┃Fire this endpoint repeatedly at a set concurrency to measure throughput and latency.                 ┃      "
"      ┃total=10 · concurrency=5 · min gap=0ms · max rate                                                     ┃      "
"      ┃                                                                                                      ┃      "
"      ┃0/0 done · —                                                                                          ┃      "
"      ┃┌ Results ─────────────────────────────┐┌ Response ──────────────────────────────────────────────────┐┃      "
"      ┃│                                      ││no response yet                                             │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃│                                      ││no endpoint selected                                        │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃└──────────────────────────────────────┘└────────────────────────────────────────────────────────────┘┃      "
"      ┃h/l field · j/k adjust · enter edit · ^R run · tab results · ctrl-c cancel · q close                  ┃      "
"      ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛      "
"                                                                                                                    "
