crates/churl/src/tui/components/load_runner/snapshots/churl__tui__components__load_runner__tests__snapshot_finished_with_failures_stats_line.snap
---
source: crates/churl/src/tui/components/load_runner/tests.rs
assertion_line: 487
expression: snapshot(&mut r)
---
"                                                                                                                    "
"      ┏ Load ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓      "
"      ┃List users  https://api.test/users                                                                    ┃      "
"      ┃Fire this endpoint repeatedly at a set concurrency to measure throughput and latency.                 ┃      "
"      ┃total=5 · concurrency=5 · min gap=0ms · max rate                                                      ┃      "
"      ┃                                                                                                      ┃      "
"      ┃5/5 done · 60% ok / 40% err · range 10–50ms · p50/p95 30/50ms · avg 30ms  done                        ┃      "
"      ┃┌ Results ─────────────────────────────┐┌ Response ──────────────────────────────────────────────────┐┃      "
"      ┃│✓ #1    200  10ms                     ││no response yet                                             │┃      "
"      ┃│✓ #2    200  20ms                     ││                                                            │┃      "
"      ┃│✗ #3    500  30ms                     ││no endpoint selected                                        │┃      "
"      ┃│✓ #4    200  40ms                     ││                                                            │┃      "
"      ┃│✗ #5    500  50ms                     ││                                                            │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃│                                      ││                                                            │┃      "
"      ┃└──────────────────────────────────────┘└────────────────────────────────────────────────────────────┘┃      "
"      ┃h/l field · j/k adjust · enter edit · ^R run · tab results · ctrl-c cancel · q close                  ┃      "
"      ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛      "
"                                                                                                                    "
