crates/churl/src/tui/components/load_runner/snapshots/churl__tui__components__load_runner__tests__snapshot_selected_response_shown.snap
---
source: crates/churl/src/tui/components/load_runner/tests.rs
assertion_line: 597
expression: snapshot(&mut r)
---
"                                                                                                                    "
"      ┏ Load ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓      "
"      ┃List users  https://api.test/users                                                                    ┃      "
"      ┃Fire this endpoint repeatedly at a set concurrency to measure throughput and latency.                 ┃      "
"      ┃total=2 · concurrency=5 · min gap=0ms · max rate                                                      ┃      "
"      ┃                                                                                                      ┃      "
"      ┃1/2 done · 100% ok / 0% err · range 42–42ms · p50/p95 42/42ms · avg 42ms  done                        ┃      "
"      ┃┌ Results ─────────────────────────────┐┏ Response ━━━━━━━━━━━ 200 OK · 42 ms · 11 B · 1 header  [h] ┓┃      "
"      ┃│✓ #1    200  42ms                     │┃1 {                                                         ┃┃      "
"      ┃│· #2                                  │┃2   "ok": true                                              ┃┃      "
"      ┃│                                      │┃3 }                                                         ┃┃      "
"      ┃│                                      │┃                                                            ┃┃      "
"      ┃│                                      │┃                                                            ┃┃      "
"      ┃│                                      │┃                                                            ┃┃      "
"      ┃│                                      │┃                                                            ┃┃      "
"      ┃│                                      │┃                                                            ┃┃      "
"      ┃│                                      │┃                                                            ┃┃      "
"      ┃│                                      │┃                                                            ┃┃      "
"      ┃│                                      │┃                                                            ┃┃      "
"      ┃│                                      │┃                                                            ┃┃      "
"      ┃└──────────────────────────────────────┘┗der · j/k move · J/K block · o/O fold · y/Y copy · / search ┛┃      "
"      ┃j/k scroll · h hdrs · p/s pretty · / search · y copy · tab config · q close                           ┃      "
"      ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛      "
"                                                                                                                    "
